<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_all_new"
    android:orientation="vertical" >

    <include layout="@layout/layout_activity_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="9dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/textview_normal_size"
                android:textColor="@color/black"
                android:text="@string/traffic_place" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:textSize="@dimen/textview_normal_size"
                android:textColor="@color/black"
                android:text="@string/traffic_place_name" />
        </LinearLayout>

        <TextView style="@style/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="9dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/textview_normal_size"
                android:textColor="@color/black"
                android:text="@string/traffic_unit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:textSize="@dimen/textview_normal_size"
                android:textColor="@color/black"
                android:text="@string/traffic_unit_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/bg_all_new"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="9dp"
                android:text="@string/traffic_office_hours"
                android:textSize="@dimen/textview_normal_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="3dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_penalty_num"
                style="@style/TextAppearance_bigger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:background="@null"
                android:hint="@string/traffic_penalty_number" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bt_next_quick_pay"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/blue_button_selector"
            android:gravity="center"
            android:text="下一步"
            android:textColor="@color/white"
            android:textSize="@dimen/button_normal_size" />
    </LinearLayout>

</LinearLayout>