<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_traffic_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_all_new"
    android:orientation="vertical" >

    <include layout="@layout/layout_activity_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/normal_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:text="网上自助认罚需要绑定车辆信息" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="6dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/normal_text" 
                android:layout_weight="2"
                android:text="@string/drivenum" />

            <EditText
                android:id="@+id/eddrivenum_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/normal_text"
                android:hint="@string/intdrivenum" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="6dp"
            android:orientation="horizontal" 
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                style="@style/normal_text"
                android:text="@string/filenum" />

            <EditText
                android:id="@+id/edfilenum_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/normal_text"
                android:hint="@string/hintfilenum" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginStart="15sp"
                android:gravity="start|center"
                style="@style/normal_text"
                android:text="@string/kindlyremandfile" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btlicenseadd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/mid_carln_bt"
                android:text="立即绑定" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="6dp"
            android:background="@color/gray"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="2"
                android:src="@drawable/pc_icon_yhkgl" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/kindlyremindadd"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>