<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/base_action_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/iv_bg_bottom"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_alignParentBottom="true"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/iv_bg_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="fitXY" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:background="@color/transparent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_top_ads"
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:id="@+id/ll_item_01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FEEFC6"
                        android:paddingBottom="4dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="4dp"
                        android:text="@string/ybt_mall_item_name_01"
                        android:textColor="#D3955B"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingTop="8dp" >

                        <LinearLayout
                            android:id="@+id/ll_item_01_01_01"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical" >

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:scaleType="fitCenter"
                                android:src="@drawable/ic_bi_mall_item_01_01_01" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:gravity="center"
                                android:text="@string/ybt_mall_item_01_01_01"
                                android:textColor="@color/yin_ci_text_black"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_item_01_01_02"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:visibility="visible" >

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:scaleType="fitCenter"
                                android:src="@drawable/ic_bi_mall_item_01_01_02" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:gravity="center"
                                android:text="@string/ybt_mall_item_01_01_02"
                                android:textColor="@color/yin_ci_text_black"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_item_01_01_03"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:visibility="visible" >

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:scaleType="fitCenter"
                                android:src="@drawable/ic_bi_mall_item_01_01_03" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:gravity="center"
                                android:text="@string/ybt_mall_item_01_01_03"
                                android:textColor="@color/yin_ci_text_black"
                                android:textSize="14sp" />
                        </LinearLayout>
                        
                        <LinearLayout
                            android:id="@+id/ll_item_01_01_04"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical" >

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:scaleType="fitCenter"
                                android:src="@drawable/ic_bi_mall_item_01_01_04" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:gravity="center"
                                android:text="@string/ybt_mall_item_01_01_04"
                                android:textColor="@color/yin_ci_text_black"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingTop="8dp" >

                        <LinearLayout
                            android:id="@+id/ll_item_01_01_05"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:visibility="visible" >

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:scaleType="fitCenter"
                                android:src="@drawable/ic_bi_mall_item_01_01_05" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:gravity="center"
                                android:text="@string/ybt_mall_item_01_01_05"
                                android:textColor="@color/yin_ci_text_black"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_item_01_01_06"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:visibility="visible" >

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:scaleType="fitCenter"
                                android:src="@drawable/ic_bi_mall_item_01_01_06" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:gravity="center"
                                android:text="@string/ybt_mall_item_01_01_06"
                                android:textColor="@color/yin_ci_text_black"
                                android:textSize="14sp" />
                        </LinearLayout>
                        
                        <LinearLayout
                            android:id="@+id/ll_item_01_01_07"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:visibility="invisible"
                            android:orientation="vertical" >

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:scaleType="fitCenter"
                                android:src="@drawable/icon_ci_mall_tao_shi_jie" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:gravity="center"
                                android:textColor="@color/yin_ci_text_black"
                                android:textSize="14sp" />
                        </LinearLayout>
                        
                        <LinearLayout
                            android:id="@+id/ll_item_02_01_01"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:visibility="invisible"
                            android:orientation="vertical" >

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:scaleType="fitCenter"
                                android:src="@drawable/icon_ci_mall_tao_shi_jie" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:gravity="center"
                                android:textColor="@color/yin_ci_text_black"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </TableRow>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>